--- a/index.html
+++ b/index.html
@@ -17,96 +17,171 @@
 
 <body>
 
-    <header id="header">
-        <div class="main_inner">
-            <div class="logo">
-                <img src="./images/logo.png" alt="">
-            </div>
-            <ul class="main_menu">
-                <li><a href="">모델</a></li>
-                <li><a href="">구매</a></li>
-                <li><a href="">체험</a></li>
-                <li><a href="">멤버스</a></li>
-                <li><a href="">제네시스</a></li>
-            </ul>
-            <ul class="icon_menu">
-                <li><i class="xi-call"></i></li>
-                <li><i class="xi-user"></i></li>
-                <li><i class="xi-search"></i></li>
-            </ul>
-        </div>
-    </header>
-
-    <section id="mainVisual">
-        <div class="mainSlide">
-            <div class="itm itm01"></div>
-            <div class="itm itm02"></div>
-            <div class="itm itm03"></div>
-            <div class="itm itm04"></div>
-            <div class="itm itm05"></div>
-            <div class="itm itm06"></div>
-            <div class="itm itm07"></div>
-            <div class="itm itm08"></div>
-            <div class="itm itm09"></div>
-        </div>
-    </section>
-
-    <!-- 사진3개 -->
-
-
-    <section class="main_content">
-        <div class="tit">
-            <h1>SUMMER</h1>
-        </div>
-
-        <div class="content">
-            <figure>
-                <div class="box">
-                    <img src="./image/옷1.jpg" alt="">
-                </div>
-                <strong>CHERRY CROP KNIT SLEEVELESS [IVORY]</strong>
-                <a href="">구매하기</a>
-            </figure>
-            <figure>
-                <div class="box">
-                    <img src="./image/옷2.jpg" alt="">
-                </div>
-                <strong>CHERRY CROP KNIT SLEEVELESS [PINK]</strong>
-                <a href="">구매하기</a>
-            </figure>
-            <figure>
-                <div class="box">
-                    <img src="./image/옷3.jpg" alt="">
-                </div>
-                <strong>CHERRY BEAD POINT SLEEVELESS [CHARCOAL]</strong>
-                <a href="">구매하기</a>
-            </figure>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="inner">
-            <div class="top">
+    <body>
+        <div class="wrapper">
+            <header id="header" class="header">
                 <div class="inner">
-                    <img src="./image/cherry_R.jpg" alt="">
+                    <a href="/">
+                        <img src="./images/logo.png" alt="">
+                    </a>
+                    <nav class="gnb">
+                        <ul>
+                            <li><a href="">모델</a></li>
+                            <li><a href="">구매</a></li>
+                            <li><a href="">체험</a></li>
+                            <li><a href="">멤버스</a></li>
+                            <li><a href="">제네시스</a></li>
+                        </ul>
+                    </nav>
+                    <div class="service">
+                        <div class="profile"><i class="xi-profile"></i></div>
+                        <div class="search"><i class="xi-search"></i></div>
+                        <div class="align-justify"><i class="xi-align-justify"></i></div>
+                    </div>
+
                 </div>
-                <span class="logo">kirsh®</span>
-            </div>
+            </header>
+            <main>
+                <section class="main_visual">
+                    <h2 class="blind">메인 슬라이드 IR</h2>
+                    <div class="main_slide">
+                        <figure class="itm01">
+                            <div class="slogan">
+                                <span>GENESIS</span>
+                                <strong> G70</strong>
+                                <p>나를 담아 더 자유롭게</p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm02">
+                            <div class="slogan">
+                                <span>GENESIS</span>
+                                <strong>G70 SHOOTING BRAKE</strong>
+                                <p>온전히 나답게 </p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm03">
+                            <div class="slogan">
+                                <span>CONCEPT CAR</span>
+                                <strong>GENESIS GV80 COUPE CONCEPT</strong>
+                                <p>다이내믹한 볼륨과 역동적 실루엣의 COUPE DNA</p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm04">
+                            <div class="slogan">
+                                <span>GENESIS</span>
+                                <strong>G90</strong>
+                                <p>2023년형 출시</p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm05">
+                            <div class="slogan">
+                                <span>ELECTRIFIED</span>
+                                <strong>G80</strong>
+                                <p>2023년형 출시 </p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm06">
+                            <div class="slogan">
+                                <span>GENESIS</span>
+                                <strong>GV60</strong>
+                                <p>2023년형 출시</p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm07">
+                            <div class="slogan">
+                                <span>GENESIS</span>
+                                <strong>GV80</strong>
+                                <p>2023년형 출시</p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm08">
+                            <div class="slogan">
+                                <span>GENESIS</span>
+                                <strong>G80</strong>
+                                <p>2023년형 출시</p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                        <figure class="itm09">
+                            <div class="slogan">
+                                <span>ELECTRIFIED</span>
+                                <strong>GV70</strong>
+                                <p>또 다른 감동을 충전하는 시간</p>
+                                <a href="">더 알아보기</a>
+                                <a href="">견적내기</a>
+                            </div>
+                        </figure>
+                    </div>
+                </section>
 
-            <div class="inner">
-                8F, 242, Pangyo-ro, Bundang-gu, Seongnam-si, Gyeonggi-do <strong>주식회사 키르시</strong>
-                <br>
-                <strong>License</strong> 284-81-00849 이준권 / <strong>Network License</strong>
-                2019-서울성동-992<br>
-                <strong>contact</strong> kirsh.official@gmail.com<br><br>
-                ©2018 kirsh All Right Reserved
-            </div>
+                section id="product" class="sec">
+                <div class="tit inner">
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est modi fugit minima nostrum excepturi
+                        aliquid.</p>
+                </div>
+                <div class="concent inner">
+                    <div class="product_slide">
+                        <figure>
+                            <img src="../images/lesedilarona01.jpg" alt="">
+                        </figure>
+                        <figure>
+                            <img src="../images/lesedilarona02.jpg" alt="">
+                        </figure>
+                        <figure>
+                            <img src="../images/lesedilarona03.jpg" alt="">
+                        </figure>
+                        <figure>
+                            <img src="../images/lesedilarona04.jpg" alt="">
+                        </figure>
+                        <figure>
+                            <img src="../images/lesedilarona05.jpg" alt="">
+                        </figure>
+                        <figure>
+                            <img src="../images/lesedilarona06.jpg" alt="">
+                        </figure>
+                    </div>
+                </div>
+                <div class="arrows">
+                    <i class="xi-arrow-left left"></i>
+                    <i class="xi-arrow-right right"></i>
+                </div>
+                </section>
 
+            </main>
+
+            <footer class="footer">
+                <div class="inner">
+                    <div class="top">
+                        <div class="inner">
+                            Lorem,ipsum dolor sit
+                        </div>
+                    </div>
+                    <address>
+                        <div class="inner">
+                            &copy; back.
+                        </div>
+                    </address>
+                </div>
         </div>
+        </footer>
         </div>
-    </footer>
-    </div>
-
+    </body>
 </body>
 
 </html>
