제네시스 홈페이지

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
                                 <span>GENESIS</span>
                                 <strong> G70</strong>
                                 <p>나를 담아 더 자유롭게</p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                         <figure class="itm02">
@@ -59,8 +60,10 @@
                                 <span>GENESIS</span>
                                 <strong>G70 SHOOTING BRAKE</strong>
                                 <p>온전히 나답게 </p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
+
                             </div>
                         </figure>
                         <figure class="itm03">
@@ -68,8 +71,9 @@
                                 <span>CONCEPT CAR</span>
                                 <strong>GENESIS GV80 COUPE CONCEPT</strong>
                                 <p>다이내믹한 볼륨과 역동적 실루엣의 COUPE DNA</p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                         <figure class="itm04">
@@ -77,8 +81,9 @@
                                 <span>GENESIS</span>
                                 <strong>G90</strong>
                                 <p>2023년형 출시</p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                         <figure class="itm05">
@@ -86,8 +91,9 @@
                                 <span>ELECTRIFIED</span>
                                 <strong>G80</strong>
                                 <p>2023년형 출시 </p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                         <figure class="itm06">
@@ -95,8 +101,9 @@
                                 <span>GENESIS</span>
                                 <strong>GV60</strong>
                                 <p>2023년형 출시</p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                         <figure class="itm07">
@@ -104,8 +111,9 @@
                                 <span>GENESIS</span>
                                 <strong>GV80</strong>
                                 <p>2023년형 출시</p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                         <figure class="itm08">
@@ -113,8 +121,9 @@
                                 <span>GENESIS</span>
                                 <strong>G80</strong>
                                 <p>2023년형 출시</p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                         <figure class="itm09">
@@ -122,46 +131,126 @@
                                 <span>ELECTRIFIED</span>
                                 <strong>GV70</strong>
                                 <p>또 다른 감동을 충전하는 시간</p>
-                                <a href="">더 알아보기</a>
-                                <a href="">견적내기</a>
+                                <a href="">더 알아보기 <i class="xi-angle-right"></i></a>
+                                <a href="">견적내기 <i class="xi-angle-right"></i></a>
+
                             </div>
                         </figure>
                     </div>
                 </section>
 
-                section id="product" class="sec">
-                <div class="tit inner">
-                    <h2>Lorem ipsum dolor sit amet.</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est modi fugit minima nostrum excepturi
-                        aliquid.</p>
-                </div>
-                <div class="concent inner">
-                    <div class="product_slide">
-                        <figure>
-                            <img src="../images/lesedilarona01.jpg" alt="">
-                        </figure>
-                        <figure>
-                            <img src="../images/lesedilarona02.jpg" alt="">
-                        </figure>
-                        <figure>
-                            <img src="../images/lesedilarona03.jpg" alt="">
-                        </figure>
-                        <figure>
-                            <img src="../images/lesedilarona04.jpg" alt="">
-                        </figure>
-                        <figure>
-                            <img src="../images/lesedilarona05.jpg" alt="">
-                        </figure>
-                        <figure>
-                            <img src="../images/lesedilarona06.jpg" alt="">
-                        </figure>
+
+
+                <section id="product" class="sec">
+                    <div class="tit inner">
+                        <h2>OUR MODELS</h2>
+                        <p>역동적이면서도 우아한 디자인과 최첨단 기술을 탑재한 제네시스 브랜드의 라인업을 살펴보세요.</p>
+                    </div>
+
+                    <h2>ALL 시간나면 버튼만들기</h2>
+
+
+                    <div class="concent inner">
+                        <div class="product_slide">
+                            <figure>
+                                <h3>G90</h3>
+                                <p>LONG WHEEL BASE</p>
+                                <img src="./images/01.g90.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>G90</h3>
+                                <img src="./images/02.g90.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>G80</h3>
+                                <img src="./images/03.G80.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>ELECTRIFIED</h3>
+                                <p>G80</p>
+                                <img src="./images/04.G80.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>G70</h3>
+                                <img src="./images/05.g70.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>G70</h3>
+                                <p>SHOOTING BRAKE</p>
+                                <img src="./images/06.G70.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>GV80</h3>
+                                <img src="./images/07.gv80.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>GV70</h3>
+                                <img src="./images/08.GV70.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>ELECTRIFIED</h3>
+                                <p>GV70</p>
+                                <img src="./images/09.gv70.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+                            <figure>
+                                <h3>GV60</h3>
+                                <img src="./images/10.GV60.png" alt="">
+                                <a href="#!">자세히 보기</a>
+                            </figure>
+
+
+
+                        </div>
+                    </div>
+
+                </section>
+
+                <div class="icon_link">
+                    <div class="icon_inner">
+                        <ul>
+                            <li class="item"><img src="./images/i-1.gif" alt="">
+                                <p>견적내기</p>
+                            </li>
+                            <li class="item"><img src="./images/i-4.gif" alt="">
+                                <p>구매 상담 신청</p>
+                            </li>
+                            <li class="item"><img src="./images/i-3.gif" alt="">
+                                <p>시승 신청</p>
+                            </li>
+                            <li class="item"><img src="./images/i-2.gif" alt="">
+                                <p>카탈로그</p>
+                            </li>
+                        </ul>
+
                     </div>
                 </div>
-                <div class="arrows">
-                    <i class="xi-arrow-left left"></i>
-                    <i class="xi-arrow-right right"></i>
-                </div>
-                </section>
+
+                full_table
+                full_inner
+                full_title
+                full_wrapper
+                full_carousel
+
+
+
 
             </main>
 
