--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
                     <p>역동적이면서도 우아한 디자인과 최첨단 기술을 탑재한 제네시스 브랜드의 라인업을 살펴보세요.</p>
                 </div>
 
-                <h2>ALL 시간나면 버튼만들기</h2>
 
 
                 <div class="concent inner">
@@ -154,64 +153,80 @@
                             <h3>G90</h3>
                             <p>LONG WHEEL BASE</p>
                             <img src="./images/01.g90.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>G90</h3>
+                            <br>
                             <img src="./images/02.g90.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>G80</h3>
+                            <br>
                             <img src="./images/03.G80.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>ELECTRIFIED</h3>
                             <p>G80</p>
                             <img src="./images/04.G80.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>G70</h3>
+                            <br>
                             <img src="./images/05.g70.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>G70</h3>
                             <p>SHOOTING BRAKE</p>
                             <img src="./images/06.G70.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>GV80</h3>
+                            <br>
                             <img src="./images/07.gv80.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>GV70</h3>
+                            <br>
                             <img src="./images/08.GV70.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>ELECTRIFIED</h3>
                             <p>GV70</p>
                             <img src="./images/09.gv70.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
                         <figure>
                             <h3>GV60</h3>
+                            <br>
                             <img src="./images/10.GV60.png" alt="">
-                            <a href="#!">자세히 보기</a>
+                            <br>
+                            <a href="#!">자세히 보기</a><i class="xi-angle-right"></i>
                         </figure>
 
 
@@ -243,6 +258,7 @@
 
             <div class="full_title">
                 <h2>THE AWARDS</h2>
+                <br>
             </div>
 
             <section class="full_wrapper">
@@ -300,8 +316,6 @@
                             </p>
                         </div>
                     </figure>
-
-
                 </div>
                 <ul class="full_dots">
                     <li>2023 CAR DESIGN AWARD</li>
@@ -311,32 +325,38 @@
                     <li>J.D. POWER 2022 U.S. INITIAL QUALITY STUDY</li>
                     <li>2022 IIHS Top Safety Pick+</li>
                 </ul>
-                </scetion>
+            </section>
 
 
 
-                <div class="cp_carousel">
-                    <div class="cp_inner">
-                        <figure>
-                            <div class="box">
-                                <img src="./images/cp_01.jpg" alt="">
-                            </div>
-                            <div class="cover">
-                                <h3>스페이스</h3>
-                                <p>제네시스의 디자인과 고유한 감각을 반영한 현대적 공간으로 여러분을 초대합니다. 제네시스에 관한 다양한 체험으로 당신만의 제네시스를 찾는 여정을
-                                    지원합니다.</p>
-                                <a href="#!">자세히 보기</a>
-                            </div>
-                        </figure>
+            <section class="sec content">
+                <div class="inner con">
+                    <figure>
+                        <div class="box">
+                            <img src="./images/cp_01.jpg" alt="">
+                        </div>
+                        <div class="cover">
+                            <h3>스페이스</h3>
+                            <br>
+                            <p>제네시스의 디자인과 고유한 감각을 반영한 현대적 공간으로 여러분을 초대합니다. 제네시스에 관한 다양한 체험으로 당신만의 제네시스를 찾는 여정을
+                                지원합니다.</p>
+                            <a href="#!">자세히 보기<i class="xi-angle-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure>
+                        <div class="box">
+                            <img src="./images/cp_02.jpg" alt="">
+                        </div>
+                        <div class="cover">
+                            <h3>로드트립</h3>
+                            <br>
+                            <p>제네시스와 내셔널지오그래픽 트래블러와 함께하는 서사적 여행, 제네시스 로드트립을 통해 자세한 정보를 확인하세요.</p>
+                            <a href="#!">자세히 보기<i class="xi-angle-right"></i></a>
+                        </div>
+                    </figure>
 
-                        </li>
-                        <li>
-
-                        </li>
-                        </ul>
-                    </div>
                 </div>
-
+            </section>
 
 
     </div>
@@ -354,12 +374,21 @@
         <div class="inner">
             <div class="top">
                 <div class="inner">
-                    Lorem,ipsum dolor sit
+                    <ul>
+                        <li>사이트맵</li>
+                        <li>이용약관</li>
+                        <li>개인정보 처리방침</li>
+                        <li>저작권 안내</li>
+                        <li>보증안내</li>
+                        <li>자동차 교환 및 환불 중재 규정 안내</li>
+                        <li>하자 재발 통보 안내</li>
+                    </ul>
                 </div>
             </div>
             <address>
                 <div class="inner">
-                    &copy; back.
+                    <p>© Copyright 2023 Hyundai Motor Company.
+                        All Rights Reserved.</p>
                 </div>
             </address>
         </div>
